--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 tiny-keccak = { version = "2.0", features = ["keccak"] }
+crypto-bigint = "0.6"
+rand = "0.9"
 
 [lib]
 name = "barrustenburg"
