--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 tiny-keccak = { version = "2.0", features = ["keccak"] }
 crypto-bigint = "0.6"
 rand = "0.9"
+blake3 = { version = "1", default-features = false }
 
 [lib]
 name = "barrustenburg"
