--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ tiny-keccak = { version = "2.0", features = ["keccak"] }
 crypto-bigint = "0.6"
 rand = "0.9"
 blake3 = { version = "1", default-features = false }
+blake2 = "0.10"
+sha2 = { version = "0.10", features = ["compress"] }
+aes = "0.8"
+cbc = "0.1"
 
 [lib]
 name = "barrustenburg"
